namespacce.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mynamespace
  labels:
    name: dev-env
