cm-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap
spec:
  containers:
  - name: cont1
    image: nginx
