hostpath.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
  - name: con1
    image: ubuntu
    command: ["bin/bash", "-c", "while true; do echo hello vinay; sleep 5; done"]
    volumeMounts:
    - name: testvolume
      mountPath: /tmp/hostvol
  volumes:
  - name: testvolume
    hostPath:
      path: /tmp/data
