intra-comm-pods-01.yml
apiVersion: v1
kind: Pod
metadata:
  name: intra-comm-pod2
spec:
  containers:
  - name: co1
    image: httpd
    ports:
      - containerPort: 80
