intra-comm-pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: inta-comm-pod1
spec:
  containers:
  - name: coo
    image: nginx
    ports:
      - containerPort: 80
