networkingpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: networkpod01
spec:
  containers:
  - name: coo
    image: centos

  - name: co1
    image: httpd
    ports:
      - containerPort: 80
