nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-cm-pod
  labels:
    app: web
spec:
  containers:
  - name: cont2
    image: nginx      
    volumeMounts:
      - name: conf
        mountPath: /etc/nginx/conf.d  #mounting path : it should specifies default.conf file has to be mounted in this path 
  volumes:
    - name: conf
      configMap:
        name: nginx-cm       # name of the configmap
        items:
          - key: nginx-configuration-configmap.conf  # external configuration file 
            path: default.conf   # what id default.conf file it is a file which has external configuratiom that should be moving into container for sp                                   - ecfic reason
