pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: mywebapp1
  labels:
    role: webserver-role
    app: nginx
spec:
  containers:
  - name: mywebserver1
    image: nginx:latest

  - name: container2
    image: redis:latest
