pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: mywebapp2
spec:
  containers:
  - name: container3
    image: ubuntu
    command: ["/bin/bash", "-c", "while true; do echo Hello-Bhupinder; sleep 5 ; done"]
