pod3.yml
apiVersion: v1
kind: Pod
metadata:
  name: mywebapp3
spec:
  containers:
  - name: container4
    image: httpd
    ports:
      - containerPort: 80
