pod4.yml
apiVersion: v1
kind: Pod
metadata:
  name: mywebapp4
  labels:
    env: production
    class: pod
spec:
  containers:
  - name: conatiner-development
    image: ubuntu
    command: ["bin/bash", "-c", "while true; do echo hello vinay; sleep 5; done"]
