pod5.yml
apiVersion: v1
kind: Pod
metadata:
  name: mywebapp5
  labels:
    env: production
    class: pod
spec:
  containers:
  - name: container7
    image: redis
  nodeSelector:
    selectNodes: node1
