resource-quota.yml
apiVersion: v1
kind: Pod
metadata:
  name: resource-quota
spec:
  containers:
  - name: con1
    image: tomcat
    resources:
      requests:
        memory: "60Mi"
        cpu: "100m"
      limits:
        memory: "100Mi"
        cpu: "200m"
