sec-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secrets
  labels:
    app: web
spec:
  containers:
  - name: cont1
    image: nginx
    volumeMounts:
      - name: sec-txt
        mountPath: /my-sec
  volumes:
    - name: sec-txt
      secret:
        secretName: my-sec
