secret-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-vol
spec:
  containers:
  - name: con1
    image: ubuntu
    command: ["bin/bash", "-c", "while true; do echo hello vinay; sleep 5; done"]
    volumeMounts:
    - name: secret-volume
      mountPath: "/tmp/secret"
  volumes:
  - name: secret-volume
    secret:
      secretName: mysecret
