volume-mounting.yml
apiVersion: v1
kind: Pod
metadata:
  name: volume-empty-dir
spec:
  containers:
  - name: con1
    image: ubuntu
    command: ["bin/bash", "-c", "while true; do echo hello vinay; sleep 5; done"]
    volumeMounts:
    - name: xchange
      mountPath: "/tmp/xchange"

  - name: con2
    image: ubuntu
    command: ["/bin/bash", "-c", "while true; do echo vinay; sleep 5; done"]
    volumeMounts:
    - name: xchange
      mountPath: "/tmp/data"
  volumes:
  - name: xchange
    emptyDir: {}
